# agente_historiador

./: .gitattributes  .gitignore  README.md  docker-compose.yaml  logging.json  pyproject.toml
architecture/graphs/: grafo.drawio
logs/: log.log.1  log.log.2
src/app/: main.py  main_2.py  main_3.py  rag_main.py
src/app/config/: config_env.py  logger_config.py
src/app/graph/builder/: base_builder.py
src/app/graph/context/: context.py
src/app/graph/nodes/: base_node.py
src/app/graph/prompts/: prompt.py
src/app/graph/states/: state.py
src/app/graph/tools/: base_tools.py  tool.py
src/app/graph/utils/: checkpointer.py  lifespan.py  load_llm.py  verify_system_message.py
src/app/infraestructure/chunk/: chunk.py
src/app/infraestructure/embeddings/: base_embeddings.py  service_embbeding.py
src/app/infraestructure/llm/: load_llm.py
src/app/infraestructure/loaders/: base_loader.py  pdf_loader.py
src/app/infraestructure/vectorstores/: base_vectorstore.py  chroma.py
src/app/services/: pdf_ingestion.py  rag_query.py
