[project]
name = "agente-historiador"
version = "0.1.0"
authors = [
    {name = "ruizgabriel161",email = "ruizgabriel161@outlook.com"}
]
description = "Projeto de estudos sobre agente de IA"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-community[chromadb,ollama,pypdf]>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain[ollama]>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pygrlogging>=0.1.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-xdist"]

[project.scripts]
# Define os comandos de console. A chave ('project1') é o comando.
# O valor aponta para 'nome_do_pacote.nome_do_modulo:nome_da_funcao'.
# Ex: 'my_package.main:run' -> src/my_package/main.py (e a função run lá dentro).
# Lembre-se de sincronizar o nome do pacote com 'known-first-party' do Ruff.
agente_dados = "app.config:Settings"

# ============================
# Lint e formatação (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Ensina ao Ruff qual é o pacote principal do seu projeto.
# Deve ser o mesmo nome da pasta dentro de 'src/'.
known-first-party = ["app"]

# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoSearchPaths = true
pythonVersion = "3.13"

include = ["src", "tests"]

exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__"
]

venv = ".venv"
venvPath = "."

executionEnvironments = [
    { root = ".", extraPaths = ["src"] }
]
# ============================
# Build e Setuptools
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Informa ao setuptools para encontrar os pacotes dentro da pasta 'src'.
# Essencial para a estrutura de layout com 'src/'.
where = ["src"]

[tool.setuptools]
# Mapeia o diretório raiz de pacotes para 'src'.
package-dir = { "" = "src" }
